# ChangeLog for dev-db/sqlite
# Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-db/sqlite/ChangeLog,v 1.144 2007/05/08 20:25:59 uberlord Exp $

  08 May 2007; Roy Marples <uberlord@gentoo.org> sqlite-2.8.16-r4.ebuild:
  Added ~sparc-fbsd keyword.

  06 May 2007; Markus Rothe <corsair@gentoo.org> sqlite-3.3.12.ebuild:
  Stable on ppc64; bug #176942

  05 May 2007; nixnut <nixnut@gentoo.org> sqlite-3.3.12.ebuild:
  Stable on ppc wrt bug 176942

  04 May 2007; Jeroen Roovers <jer@gentoo.org> sqlite-3.3.12.ebuild:
  Stable for HPPA (bug #176942).

  04 May 2007; Gustavo Zacarias <gustavoz@gentoo.org> sqlite-3.3.12.ebuild:
  Stable on sparc wrt #176942

  04 May 2007; Raúl Porcel <armin76@gentoo.org> sqlite-3.3.12.ebuild:
  ia64 + x86 stable wrt #176942

*sqlite-3.3.17 (03 May 2007)

  03 May 2007; Petteri Räty <betelgeuse@gentoo.org> metadata.xml,
  +sqlite-3.3.17.ebuild:
  Version bump. Makes the soundex function available with the soundex local
  use flag. Fixes bug #168304 and bug #143794. Add myself to metadata.xml
  until someone else takes over.

  03 May 2007; Steve Dibb <beandog@gentoo.org> sqlite-3.3.12.ebuild:
  amd64 stable, bug 176942

  10 Mar 2007; Luca Longinotti <chtekk@gentoo.org>
  -files/sqlite-3.2.1-data-corruption.patch,
  -files/sqlite3-configure-debug.patch, -files/sqlite-3.2.1-tcl-fix.patch,
  -files/sqlite-3-test-fix.patch, metadata.xml, -sqlite-2.8.16-r1.ebuild,
  sqlite-2.8.16-r4.ebuild, -sqlite-3.2.1-r3.ebuild, sqlite-3.3.5-r1.ebuild,
  -sqlite-3.3.6.ebuild, sqlite-3.3.12.ebuild:
  Cleanup/fixup ebuilds, remove old ebuilds and patches, fix bug #156299.

  02 Feb 2007; Petteri Räty <betelgeuse@gentoo.org> sqlite-3.3.12.ebuild:
  The optional tcl support in sqlite must be enabled in sqlite to run tests.
  Just having tcl is not enough.

*sqlite-3.3.12 (02 Feb 2007)

  02 Feb 2007; Petteri Räty <betelgeuse@gentoo.org> +sqlite-3.3.12.ebuild: