@@ -6,7 +6,7 @@ AUX sqlite-64bit-test-fix.patch 604 RMD160 58b1df9e9f6593d41fa17541eb3b429c70da3
 AUX sqlite-64bit-test-fix2.patch 438 RMD160 83904019c277fdf24c8299b0e6aba7184cd8b56f SHA1 15512752ca2eefeab7daad22a76d767692dac3b5 SHA256 87c47559f891736006050f0a3a4e4393084cf314a7bc44cc0e09f57efc0de23b
 DIST sqlite-3.3.12.tar.gz 2021696 RMD160 98154b3e8663b6c7ec11a7094a51781ee8384317 SHA1 4c6e3cd29e4e1c49857033918b0e227926edd4bb SHA256 e005781cb0356f65200c05979c04fea533b9a7d873e0060672a4d384468b7186
 DIST sqlite-3.3.17.tar.gz 2111281 RMD160 a948306fc45f7baa8cb241a6cf7e4a57c9c6468c SHA1 6c968e3c608be4ab137577411869abdeffb0c3f7 SHA256 ee667dcc41c001229b93efff4ae489236934fd590c7c3d6664105ed50d6f899c
-EBUILD sqlite-3.3.12.ebuild 2378 RMD160 2b520604feb5d7931021e57401d68b2425e35298 SHA1 91afa3638c00f0f8f7a7acdcb8da433dc46ba31d SHA256 0a43efeb31e3b2838b2fd9c8eeeed7984fde4bdd37fd4763b787ee40b9ad8f3a
-EBUILD sqlite-3.3.17.ebuild 2413 RMD160 71f4401a4a946fbf91410d85fcb1c20b42c63395 SHA1 b516fafe81bb9e5deeebf414f3bfe2c9bd98e458 SHA256 886e3219e8e89a9663036c4305dc38c551f313c5b428bbf75e2b684197217edb
-MISC ChangeLog 20772 RMD160 69437dbceeffad72f342eeeea522d1ce62c3cf63 SHA1 935d3da8ae06fed15aef7ea672b14aa8abcfc56f SHA256 4c51203ffaddfd48bf38082773646123c4348628e800d1b2166927e58498f00f
+EBUILD sqlite-3.3.12.ebuild 2177 RMD160 a3daf63960046130c7859ae8558aefb946a1b874 SHA1 860f6eb956786b4ef4b681abd0bb32837b2271f2 SHA256 30d4e1e3d36151809466ddc451dbf2881efb4ae26125ebf265ce21215336b7d1
+EBUILD sqlite-3.3.17.ebuild 2209 RMD160 f3b3b0bd59619db04021c4afef91da560a8ef8e1 SHA1 aeb4f979a9a0777b5e945ac025472e91a839e7b6 SHA256 69266f87cc3f77617f397415364279bc1fc54603c7d8275dd43f7f0450563b39
+MISC ChangeLog 20989 RMD160 e2f3f4baf1b6af37bfb102356d8f78ea5dc7089f SHA1 d2e86aa024541aa5bebe927219d4030725234ac5 SHA256 194005dea749ee9dea404d42be57c4f5b685094ef911a34e7ca7c1271ec540c4
 MISC metadata.xml 278 RMD160 cb266116d64b539a40af5efb4f6734dd0d506b6a SHA1 3eb088ba0a7736d19ca4dbe560de06a5e2b0bd3a SHA256 143dace3d40b3fe072c2f845bc932a6578944b42df26a6da3febfd1746f05617
