@@ -1,6 +1,10 @@
 # ChangeLog for dev-db/sqlite
 # Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-db/sqlite/ChangeLog,v 1.144 2007/05/08 20:25:59 uberlord Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-db/sqlite/ChangeLog,v 1.145 2007/05/23 01:14:54 cardoe Exp $
+
+  23 May 2007; Doug Goldstein <cardoe@gentoo.org> sqlite-2.8.16-r4.ebuild,
+  sqlite-3.3.5-r1.ebuild, sqlite-3.3.12.ebuild, sqlite-3.3.17.ebuild:
+  Fixing FEATURES=test to be properly RESTRICTed as per ferringb's fixes
 
   08 May 2007; Roy Marples <uberlord@gentoo.org> sqlite-2.8.16-r4.ebuild:
   Added ~sparc-fbsd keyword.
